--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     ports:
       - "8000:8000"  # OpenAI API compatible endpoint
     volumes:
-      - ~/.cache/huggingface:/root/.cache/hugg
-      - /usr/local/cuda-13.1/compat:/usr/local/cuda/compat:ro  # CUDA 13.1 compat libs for Blackwellingface  # Model cache
+      - ~/.cache/huggingface:/root/.cache/huggingface  # Model cache
+      - /usr/local/cuda-13.1/compat:/usr/local/cuda/compat:ro  # CUDA 13.1 compat libs for Blackwell
       - ./results:/results  # Telemetry output
     command: >
       --host 0.0.0.0
