--- a/configs/sanity_check.yaml
+++ b/configs/sanity_check.yaml
@@ -7,7 +7,7 @@ benchmark:
   output_prefix: "sanity_check"
 
 model:
-  name: "mistralai/Mistral-7B-Instruct-v0.3"  # Non-gated model for quick testing
+  name: "auto"  # Auto-detected from the running vLLM server
   quantization: "none"
   tensor_parallel_size: 1
   enable_prefix_caching: false
