--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # vLLM OpenAI-compatible inference server
   vllm:
@@ -10,6 +8,7 @@ services:
       - NVIDIA_VISIBLE_DEVICES=all
       - CUDA_VISIBLE_DEVICES=0
       - LD_LIBRARY_PATH=/usr/local/cuda/compat:/usr/local/cuda/lib64
+      - HF_TOKEN=${HF_TOKEN:-}
     ports:
       - "8000:8000"  # OpenAI API compatible endpoint
     volumes:
@@ -19,11 +18,12 @@ services:
     command: >
       --host 0.0.0.0
       --port 8000
-      --model ${MODEL_NAME:-meta-llama/Llama-3.1-70B-Instruct}
+      --model ${MODEL_NAME:-mistralai/Mistral-7B-Instruct-v0.3}
       --tensor-parallel-size ${TENSOR_PARALLEL:-1}
-      --gpu-memory-utilization ${GPU_MEMORY_UTIL:-0.95}
+      --gpu-memory-utilization ${GPU_MEMORY_UTIL:-0.92}
       --max-model-len ${MAX_MODEL_LEN:-32768}
-      --enable-prefix-caching
+      ${QUANTIZATION_FLAG:-}
+      ${ENABLE_PREFIX_CACHING_FLAG:---enable-prefix-caching}
       --trust-remote-code
     deploy:
       resources:
